# copt

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.beads/: issues.jsonl  last-touched
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md  MIGRATION.md  RULES.md  RUSTY_THINGS.md  RUST_LEARNINGS.md
src/: main.rs
src/analyzer/: mod.rs
src/cli/: config.rs  mod.rs  suggest.rs
src/llm/: anthropic.rs  bedrock.rs  mod.rs
src/optimizer/: mod.rs
src/rules/: mod.rs
src/tui/: app.rs  components.rs  diff.rs  icons.rs  linear.rs  mod.rs  model.rs  renderer.rs  snapshot_tests.rs  spinner.rs  stats.rs  terminal.rs  theme.rs  update.rs  view.rs
src/tui/snapshots/: copt__tui__snapshot_tests__diff_view.snap  copt__tui__snapshot_tests__help_view.snap  copt__tui__snapshot_tests__main_view_analysis_done.snap  copt__tui__snapshot_tests__main_view_done.snap  copt__tui__snapshot_tests__no_issues.snap  copt__tui__snapshot_tests__offline_mode.snap  copt__tui__snapshot_tests__small_terminal.snap
src/tui/widgets/: analysis.rs  dashboard.rs  diff.rs  error_modal.rs  header.rs  help.rs  minimal.rs  mod.rs  progress.rs  status_bar.rs  suggest_modal.rs
src/utils/: file.rs  mod.rs  text.rs
